[package]
name = "dinoscore"
version = "0.1.0"
authors = ["Rob Masters <rjcmasters@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
specs-derive = "0.4.1"

[dependencies.sdl2]
version = "0.34.5"
default-features = false
features = ["image"]

[dependencies.specs]
version = "0.16.1"
features = ["shred-derive"]
